--- a/Liar_distribution.Rmd
+++ b/Liar_distribution.Rmd
@@ -7,9 +7,13 @@ output: html_document
 
 ###Intro
 
-[explain what is happening here]
+Background: The plots below present results from an experience sampling (ESM) study on honesty. 3 times a day for 1 week, 68 people answered questions about the everyday interactions that they had with their romantic partners (n = 792 observations). For each interaction, people reported (1) how much they thought lying would be beneficial, and (2) how honesty they were in the interaction.
+
+The purpose of this portfolio piece is to explore several different ways of representing the relationship between the perceived benefit of lying and the honesty of people's communication with their romantic partner.
 
 ###Recreating my original plot
+
+First, we have to load tidyverse, and our dataset.
 
 ```{r loading-packages-data}
 library(tidyverse)
@@ -17,6 +21,7 @@ library(tidyverse)
 honesty <- read.csv("data/Honesty Goals data (Deidentified).csv")
 ```
 
+Then, let's try to get a basic histogram of honesty. In this case, we want to see the distribution of our variable "A_statehonesty", which represents the average of participant's responses to 3 items measuring how honest they were on a 4-point scale, when talking with their romantic partner.
 
 ```{r basic-histogram}
 ggplot(data = honesty,
@@ -26,7 +31,7 @@ ggplot(data = honesty,
 
 Oh no. There is a huge negative value in our dataset (-99) causing problems for our histogram. This has reminded me that this dataset is not completely clean. Because of a qualtrics setting, questions that participants seem to have intentionally skipped where coded as -99. Also, there are currently observations that were determined to be invalid in the dataset. 
 
-To fix this I have to filter out these invalid observations. Luckily, this is not too difficult because there is a variable in the dataset (ValidID) that represents whether or not observations met our various criteria for validity when we cleaned this data. Because we are only interested in honesty with romantic partners, we can also filter for only those interactions participants had with their partners. Let's write some code to clean up this dataset.
+To fix this I have to filter out these invalid observations. Luckily, this is not too difficult because there is a variable in the dataset (ValidID) that represents whether or not observations met our various criteria for validity when we cleaned this data. We also decided a priori to only include people who completed at least 4 ESM reports, so we can go ahead and filter those people out too (using the "inclusionsuggestion" variable. Because we are only interested in honesty with romantic partners, we can also filter for only those interactions participants had with their partners. Let's write some code to clean up this dataset.
 
 ```{r filtering-for-clean-data}
 #Turning -99 into missing data
@@ -43,13 +48,362 @@ honesty_partners_clean <- honesty %>%
 ggplot(data = honesty_partners_clean,
        aes(x = A_statehonesty))+
   geom_histogram(binwidth = .33, color = "black", fill = "#6699FF")
-#BEN - some tasks would be to add labels to this and set the background white
 ```
+
+Now let's try to recreate the faceted plots from my MAP. These are faceted on a variable that combines two existing variables that represent participant's belief that lying would be beneficial (a) for themselves, and (b) for their partner. We now need to make that variable.
+
+```{r make-combined-benefit}
+honesty_partners_clean <- honesty_partners_clean %>%
+  mutate(combined_benefit = round((A_benefitself + A_benefitpartner)/2))
+```
+
+Now, let's see if we can recreate the histograms from the original figure.
 
 ```{r multiple-hists}
 ggplot(data = honesty_partners_clean %>%
-         filter(!is.na(A_benefitself)),
+         filter(!is.na(combined_benefit)),
        aes(x = A_statehonesty))+
   geom_histogram(binwidth = .33, color = "black", fill = "#6699FF")+
-  facet_wrap(~ A_benefitself, ncol = 5)
+  facet_wrap(~ combined_benefit, ncol = 5)
 ```
+
+Looks great(-ish)! Now, why don't we try to make the plot a little bit nicer to look at and closer to being informative. In particular, I'd like to do 3 things to improve the plot.
+
+1. Simplify the plot by getting rid of the gridlines and only having elements that help draw attention to the data.
+
+2. Changing the scaling so that the histograms don't have awkward empty space between them, and so there's only as much negative space at the top of the plots as necessary. Having a smaller scale will hopefully make those few occasions at high levels of perceived benefit easier to see.
+
+3. Give the plot meaningful labels, and a title.
+
+I tried out several different ideas and iterations of the plot to try and achieve this. I think the results below are a good starting point for us to try and improve this visualization! Check out the references in the comments for some websites where I found helpful code for achieving some of this.
+
+```{r change-theme}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit)),
+       aes(x = A_statehonesty))+
+  geom_histogram(
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c (0, 500))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+
+##References:
+# http://malditobarbudo.xyz/blog/r/starting-bars-and-histograms-at-zero-in-ggplot2/
+# https://stackoverflow.com/questions/10861773/remove-grid-background-color-and-top-and-right-borders-from-ggplot2
+```
+
+##Trying out new visualizations
+
+Okay, now that we have the faceted histograms, I think it makes since to see how these data might look with a few different kinds of visualizations. First, I tried a violin plot. It nicely shows how scores don't cluster as much around "4" when the benefit to lying increases. Unfortunately, these look a little bit awkward to me, probably because scores below "2" are so rare, causing the violins to be sort of cutoff at the bottom.
+
+```{r faceted-violins}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit)),
+       aes(x = combined_benefit, y = A_statehonesty))+
+  geom_violin(color = "black", fill = "#6699FF", alpha = 0.7)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying", 
+    y = "State Honesty")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+Then, I tried making some density plots. I think these are pretty nice! They show that the distribution of honesty is extremely skewed in situations where people saw no benefit to lying, and that that the distribution becomes less skewed as the perceived benefit of lying increases. The only potential problem with this plot is that we lose some information, specifically that situations where lying was seen as beneficial were uncommon and thus we don't have very many datapoints for benefit scores of "4" or "5". It sort of feels like these distributions might be over-extrapolating from only a few datapoints.
+
+```{r faceted-density}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit)),
+       aes(x = A_statehonesty))+
+  geom_density(adjust = 3, fill = "#6699FF", alpha = .7)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 2.5))+
+  scale_x_continuous(
+    expand = c(0, 0),
+    limits = c(1, 4))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Density")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+###Trying a dichotomous definition of benefit
+
+Since one of the problems we are having with out plots is that people said they saw no benefit to lying (e.g., a score of "1") so much more often than they saw lying as any level of beneficial, I thought it might be worth trying a different definition of benefit that would allow the number of observations that we are comparing between each facet to be more similar.
+
+Specifically, I decided to try a new, dichotomous benefit variable, which contains values for (1) situations when lying would not be beneficial, and (2) situations when lying could have been anywhere from slightly to extremely beneficial. Then, I tried remaking each plot from earlier, this time answering a slightly different question. That is, how does the distribution of honesty when there's no benefit to lying compare to the distribution of honesty when there is at least a little benefit to lying.
+
+```{r redefining-benefit}
+#making a dichotomous benefit variable
+
+honesty_partners_clean <- honesty_partners_clean %>%
+  mutate(dich_benefit = if_else(combined_benefit == 1, 1, 2))
+
+#trying a 2-facet histogram
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(dich_benefit)),
+       aes(x = A_statehonesty))+
+  geom_histogram(
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  facet_wrap(~ dich_benefit)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c (0, 500))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r dichotomous-violin}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(dich_benefit)),
+       aes(x = dich_benefit, y = A_statehonesty))+
+  geom_violin(color = "black", fill = "#6699FF", alpha = 0.7)+
+  facet_wrap(~ dich_benefit)+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying", 
+    y = "State Honesty")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r dichotomous-density}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(dich_benefit)),
+       aes(x = A_statehonesty))+
+  geom_density(adjust = 3, fill = "#6699FF", alpha = .7)+
+  facet_wrap(~ dich_benefit)+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 2.5))+
+  scale_x_continuous(
+    expand = c(0, 0),
+    limits = c(1, 4))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+These plots have some nice qualities. They show that total honesty is extremely common when there is no benefit to lying. Then, when lying is at least a little bit beneficial, honesty is still quite common but the difference in frequency between complete honesty and various levels of dishonesty is not nearly as overwhelming. Unfortunately, I do think that a lot of useful information is lost from dichotomosing benefit in this way, so I decided to scrap this idea and try something different.
+
+###Considering within-person variability in perceived benefit
+```{r aggregate}
+honesty_partners_clean <- honesty_partners_clean %>%
+  group_by(ID) %>%
+  mutate(mean_benefit = mean(combined_benefit, na.rm = TRUE))
+```
+
+```{r new-hists}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit), mean_benefit > 1),
+       aes(x = A_statehonesty))+
+  geom_histogram(
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c (0, 300))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r new-violins}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit), mean_benefit > 1),
+       aes(x = A_statehonesty))+
+  geom_density(adjust = 3, fill = "#6699FF", alpha = .7)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 2))+
+  scale_x_continuous(
+    expand = c(0, 0),
+    limits = c(1, 4))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r frequency-density}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit), mean_benefit > 1),
+       aes(x = A_statehonesty))+
+  geom_histogram(
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  geom_density(
+               adjust = 3)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 300))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r hist-density}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit), mean_benefit > 1),
+       aes(x = A_statehonesty))+
+  geom_histogram(aes(y = ..density..),
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  geom_density(aes(y = ..density..),
+               adjust = 3)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 3))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Density")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+```{r count-density, fig.height = 5}
+ggplot(data = honesty_partners_clean %>%
+         filter(!is.na(combined_benefit), mean_benefit > 1),
+       aes(x = A_statehonesty))+
+  geom_histogram(aes(y = ..count..,),
+    binwidth = .33, 
+    color = "black", 
+    fill = "#6699FF")+
+  geom_density(aes(y = ..count..),
+               linewidth = 0.55,
+               adjust = 3)+
+  facet_wrap(~ combined_benefit, ncol = 5)+
+  scale_y_continuous(
+    expand = c(0, 0),
+    limits = c(0, 300))+
+  theme(
+    plot.background = element_blank(),
+    panel.grid.major = element_blank(),
+    panel.grid.minor = element_blank(),
+    panel.border = element_blank())+
+  theme(axis.line = element_line(color = "black"))+
+  labs(
+    title = "State Honesty Conditioned on Perceived Benefits of Lying",
+    subtitle = "Benefit of Lying",
+    x = "State Honesty", 
+    y = "Frequency")+
+  theme(
+    plot.title = element_text(hjust = 0.5),
+    plot.subtitle = element_text(hjust = 0.5))
+```
+
+I'm still not completely satisfied with this version of the plot, but I think it has improved some over the course of all these iterations. 
