--- a/Liar_distribution.Rmd
+++ b/Liar_distribution.Rmd
@@ -5,13 +5,13 @@ date: "2023-01-26"
 output: html_document
 ---
 
-###Intro
+### Intro
 
 Background: The plots below present results from an experience sampling (ESM) study on honesty. 3 times a day for 1 week, 68 people answered questions about the everyday interactions that they had with their romantic partners (n = 792 observations). For each interaction, people reported, among other things, (1) how much they thought lying would be beneficial, and (2) how honesty they were in the interaction.
 
 The purpose of this portfolio piece is to explore several different ways of representing the relationship between the perceived benefit of lying and the honesty of people's communication with their romantic partner. In particular, we want to make a plot that nicely displays 2 key results from our study, those being (1) situations in which people perceive lying to their partner as beneficial are relatively rare, and (2) the distribution of honesty is highly skewed toward complete honesty when lying is seen as not beneficial, but the distribution becomes closer to normal as the potential benefit associated with lying increases.
 
-###Recreating my original plot
+### Recreating my original plot
 
 First, we have to load tidyverse, and our dataset.
 
@@ -43,7 +43,7 @@ honesty_partners_clean <- honesty %>%
   filter(inclusionsuggestion < 2, validID == 0, partner_interaction == 1)
 ```
 
-###Clean histogram
+### Clean histogram
 ```{r histogram-time}
 ggplot(data = honesty_partners_clean,
        aes(x = A_statehonesty))+
@@ -109,7 +109,7 @@ ggplot(data = honesty_partners_clean %>%
 # https://stackoverflow.com/questions/10861773/remove-grid-background-color-and-top-and-right-borders-from-ggplot2
 ```
 
-###Trying out new visualizations
+### Trying out new visualizations
 
 Okay, now that we have the faceted histograms, I think it makes since to see how these data might look with a few different kinds of visualizations. First, I tried a violin plot. It nicely shows how scores don't cluster as much around "4" when the benefit to lying increases. Unfortunately, these look a little bit awkward to me, probably because scores below "2" are so rare, causing the violins to be sort of cutoff at the bottom.
 
@@ -133,6 +133,7 @@ ggplot(data = honesty_partners_clean %>%
     plot.title = element_text(hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5))
 ```
+
 Then, I tried making some density plots. I think these are pretty nice! They show that the distribution of honesty is extremely skewed in situations where people saw no benefit to lying, and that that the distribution becomes less skewed as the perceived benefit of lying increases. The only potential problem with this plot is that we lose some information, specifically that situations where lying was seen as beneficial were uncommon and thus we don't have very many datapoints for benefit scores of "4" or "5". It sort of feels like these distributions might be over-extrapolating from only a few datapoints.
 
 ```{r faceted-density}
@@ -163,7 +164,7 @@ ggplot(data = honesty_partners_clean %>%
     plot.subtitle = element_text(hjust = 0.5))
 ```
 
-###Trying a dichotomous definition of benefit
+### Trying a dichotomous definition of benefit
 
 Since one of the problems we are having with out plots is that people said they saw no benefit to lying (e.g., a score of "1") so much more often than they saw lying as any level of beneficial, I thought it might be worth trying a different definition of benefit that would allow the number of observations that we are comparing between each facet to be more similar.
 
@@ -251,9 +252,10 @@ ggplot(data = honesty_partners_clean %>%
     plot.title = element_text(hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5))
 ```
+
 These plots have some nice qualities. They show that total honesty is extremely common when there is no benefit to lying. Then, when lying is at least a little bit beneficial, honesty is still quite common but the difference in frequency between complete honesty and various levels of dishonesty is not nearly as overwhelming. Unfortunately, I do think that a lot of useful information is lost by dichotomizing benefit in this way, so I decided to scrap this idea and try something different.
 
-###Considering within-person variability in perceived benefit
+### Considering within-person variability in perceived benefit
 
 Another idea that I had was to remake the plots for all 5 levels of perceived benefit, but only including data from people who were in at least one situation where they saw some benefit to lying. The advantage of this approach is that if there are people who never said they saw any benefit to lying, these are inflating the number of cases that are included in the first panel, and the data from these individuals isn't really speaking to the point of this plot, which is to show that a person's likelihood of being less than perfectly honest changes depending on whether there is a benefit to lying.
 
@@ -268,6 +270,7 @@ honesty_partners_clean %>%
   count(mean_benefit) %>%
   arrange(mean_benefit)
 ```
+
 Now, I'd like to try recreating the earlier plots, filtering out individuals who never reported a benefit score > "1".
 
 ```{r new-hists}
@@ -297,6 +300,7 @@ ggplot(data = honesty_partners_clean %>%
     plot.title = element_text(hjust = 0.5),
     plot.subtitle = element_text(hjust = 0.5))
 ```
+
 The histogram is very similar, and shows pretty much the same information as earlier. However, I think it may be an improvement since the x axis is not as tall, which makes the observations at the higher levels of benefit easier to see, allowing us to get a better sense of how the distribution is levelling out. The density plots also still do a nice job of showing this.
 
 ```{r new-density}
@@ -327,7 +331,7 @@ ggplot(data = honesty_partners_clean %>%
     plot.subtitle = element_text(hjust = 0.5))
 ```
 
-###Making a final-er plot, with combined histograms and density distributions.
+### Making a plot with combined histograms and density distributions.
 
 Since I like both the histogram and the density plots, and I think they emphasize slightly different but equally important aspects of our data, I wanted my final step to be combining both of them into one plot.
 
